--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ ul {
 .overlay {
     background-image: url(images/DHFA-logo-overlay.png);
     background-size: cover;
-    opacity: 0.85;
+    opacity: 0.75;
     z-index: -1;
     position: fixed;
     left: 0;
@@ -83,6 +83,11 @@ ul {
     height: 100%;
     mix-blend-mode: screen;
     pointer-events: none;
+  }
+
+  .hilt-1, 
+  .hilt-2 {
+      display: none;
   }
 /* HEADER SECTION---------------------------- */
 .header-top {
@@ -262,6 +267,8 @@ ul {
     margin-top: 4rem;
 }
 
+/* VIDEO LIBRARY SECTION-------------------------- */
+
 .papa-phil {
     z-index: 1;
     margin-top: 2rem;
@@ -290,6 +297,7 @@ ul {
     background-color: rgba(0, 0, 0, 0.6);
     max-width: 100vw;
     padding: 2rem;
+    line-height: 1rem;
 }
 
 .bottom-div {
@@ -317,13 +325,23 @@ svg:hover {
 
 /* MEDIA QUERIES-------------------------------- */
 @media (min-width: 1046px){
+/* OPENING TAG SECTION 1046px----------------------- */
 
+.opening-tag h1 {
+    min-width: 70vw;
+}
+
+.head-img {
+    max-height: 100%;
+}
+
+/* REGISTRATION SECTION 1046px---------------------- */
 .registration {
     display: inline-flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
-    max-width: 100vw;
+    min-width: 100vw;
 }
 
 .classes {
@@ -354,5 +372,56 @@ svg:hover {
     display: inline-flex;
     flex-direction: column;
 }
+
+.papa-phil {
+    display: flex;
+    flex-direction: row;
+    max-width: 50vw;
+}
+
+/* VIDEO LIBRARY SECTION 1046px-------------------------- */
+
+.video-library {
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    flex-direction: row;
+    max-width: 50vw;
+}
+
+.video-div {
+    display: flex;
+   align-self: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hilt-1 {
+    display: flex;
+    z-index: -1;
+    position: absolute;
+    top: 20rem;
+    bottom: 0;
+}
+
+/* CLUB DOCUMENTS SECTION 1046px-------------------------- */
+
+.club-documents {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    flex-direction: column;
+    max-width: 50vw;
+}
+
+.hilt-2 {
+    display: block;
+    z-index: -1;
+    position: absolute;
+    top: -3rem;
+}
+
+/* SOCIAL MEDIA FOOTER 1046px----------------------------- */
 
 }
