--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,12 @@ body {
 button {
     font-family: "Roboto";
     max-height: 3rem;
-    max-width: 12rem;
+    white-space: nowrap;
     color: white;
     background-color: #124bce;
     border: solid 1px #124bce;
     border-radius: 40px;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     text-transform: uppercase;
     padding: 10px 15px;
     cursor: pointer;
@@ -48,10 +48,10 @@ h1 {
     font-family: "BabaPro";
     font-weight: lighter;
     text-align: center;
-    font-size: 3rem;
+    font-size: 2rem;
     border-bottom: solid white 3px;
     padding: 1rem 0;
-    width: 25rem;
+    max-width: 15rem;
     margin: 0 auto 1rem auto;
     line-height: 3.5rem;
 }
@@ -61,6 +61,7 @@ section {
     text-align: center;
     margin: 4rem 0;
     line-height: 1.3rem;
+    font-size: 1rem;
 }
 
 p {
@@ -106,10 +107,10 @@ ul {
 .logo {
     position: absolute;
     display: inline-flex;
-    width: 8rem;
-    top: .5rem;;
+    width: 5.75rem;
+    top: .75rem;;
     bottom: 0;
-    left: 6rem;
+    left: 4.5rem;
 }
 
 .members-tag {
@@ -117,9 +118,9 @@ ul {
     color: black;
     font-family: "BabaPro";
     display: inline-flex;
-    top: .5rem;
-    right: 2rem;
-    font-size: 2rem;
+    top: 1rem;
+    right: .7rem;
+    font-size: 1rem;
 }
 
 .head-img {
@@ -132,18 +133,18 @@ ul {
 
 .shield {
     position: absolute;
-    top: 7rem;
+    top: 3.5rem;
     bottom: 0;
-    left: 2rem;
+    left: -2rem;
 }
 
 /* NAVIGATION SECTION------------------------ */
 .menuToggle {
-    max-width: fit-content;
+    max-width: 5rem;
   display: block;
   position: relative;
-  top: 1rem;
-  left: 1.5rem;
+  top: 1em;
+  left: .75rem;
   z-index: 2;
   -webkit-user-select: none;
   user-select: none;
@@ -259,12 +260,12 @@ ul {
 
 .class-text, .reg-text {
     text-align: left;
-    max-width: 10rem;
-    margin-left: 0rem;
+    margin-left: 1rem;
 }
 
 .check-button, .reg-button {
     margin-top: 4rem;
+    margin-right: 1rem;
 }
 
 /* VIDEO LIBRARY SECTION-------------------------- */
@@ -276,6 +277,7 @@ ul {
     width: 100%;
     overflow: hidden;
     filter: grayscale(100%);
+    margin-top: 0;
 }
 
 
@@ -291,13 +293,17 @@ ul {
     display: flex;
     flex-direction: row;
     text-decoration: none;
-    justify-content: space-between;
+    justify-content: space-around;
     list-style-type: none;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.6);
     max-width: 100vw;
     padding: 2rem;
-    line-height: 1rem;
+    font-size: .5rem;
+}
+
+.social-list li {
+    padding: .6rem;
 }
 
 .bottom-div {
@@ -309,8 +315,8 @@ ul {
 }
 
 svg {
-    max-height: 3rem;
-    max-width: 3rem;
+    max-height: 2rem;
+    max-width: 2rem;
     fill: white;
 }
 
