--- a/styles.css
+++ b/styles.css
@@ -219,12 +219,17 @@ ul {
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
+  border: solid 3px #32ebef;
+  border-radius: 40px;
   background-color: rgba(0, 0, 0, 0.7);
+  background-image: url(images/Hilts-1.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: 50rem;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
-  
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
