--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ h1 {
     padding: 1rem 0;
     max-width: 15rem;
     margin: 0 auto 1rem auto;
-    line-height: 3.5rem;
+    line-height: 2rem;
 }
 
 section {
@@ -106,7 +106,7 @@ ul {
 
 .logo {
     position: absolute;
-    display: inline-flex;
+    display: flex;
     width: 5.75rem;
     top: .75rem;;
     bottom: 0;
@@ -285,6 +285,13 @@ ul {
     margin-top: 0;
 }
 
+.video-div {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-evenly;
+    max-width: 15rem;
+}
 
 /* SOCIAL MEDIA SECTION-------------------------- */
 
@@ -311,6 +318,10 @@ ul {
     padding: .6rem;
 }
 
+.social-list span {
+    display: none;
+}
+
 .bottom-div {
     display: flex;
     flex: 1;
@@ -320,8 +331,8 @@ ul {
 }
 
 svg {
-    max-height: 2rem;
-    max-width: 2rem;
+    max-height: 3rem;
+    max-width: 3rem;
     fill: white;
 }
 
@@ -335,7 +346,70 @@ svg:hover {
 }
 
 /* MEDIA QUERIES-------------------------------- */
+
+@media(min-width: 500px){
+
+/* OPENING TAG SECTION 500px-------------------- */
+
+
+
+/* REGISTRATION SECTION 500px-------------------- */
+
+
+
+/* OPENING TAG SECTION 500px-------------------- */
+
+
+/* VIDEO LIBRARY SECTION 500px-------------------- */
+
+
+/* CLUB DOCUMENTS SECTION 500px-------------------- */
+
+
+/* SOCIAL MEDIA SECTION 500px-------------------- */
+}
+
 @media (min-width: 1046px){
+
+button {
+    min-width: 12rem;
+}
+/* HEADER SECTION 1046px----------------------------- */
+
+.header-top {
+    min-height: 12rem;
+}
+
+.menuToggle {
+    top: 2rem;
+    left: 1.5rem;
+}
+
+
+.logo {
+    min-width: 11rem;
+    left: 6rem;
+}
+
+.members-tag {
+    font-size: 2rem;
+    top: 1.75rem;
+    left: 19rem;
+}
+
+.shield {
+    top: 10rem;
+    bottom: 0;
+    left: -2rem;
+    min-width: 50rem;
+}
+
+.head-img {
+    margin-top: 4rem;
+}
+
+
+
 /* OPENING TAG SECTION 1046px----------------------- */
 
 .opening-tag h1 {
@@ -355,42 +429,61 @@ svg:hover {
     min-width: 100vw;
 }
 
-.classes {
-    margin-top: 4rem;
-}
-
-.reg-div{
-    display: inline-flex;
-    flex-direction: row-reverse;
+.class-div, .reg-div{
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
-.reg-div h1 {
-    min-width: fit-content;
+.class-div {
+    margin-left: 7rem;
+}
+
+.class-text {
+    text-align: left;
+    margin: 1rem 0;
+}
+
+.regs {
+    margin-top: 1rem;
+}
+
+.reg-tag {
+    min-width: 22rem;
+    margin-right: 8rem;
 }
 
 .reg-text {
     text-align: right;
+    margin: 1rem 0 2rem 0;
+}
+
+.reg-button, .check-button {
+    margin: 2rem 0 4rem 0rem;
+    max-width: 10rem;
+}
+
+.reg-button {
+    margin-left: 8rem;
+    margin-top: 0;
 }
 
 .class-text,
 .reg-text {
-    margin-left: 2rem;
     max-width: 20rem;
 }
 
-.check-button, .reg-button {
-    display: inline-flex;
-    flex-direction: column;
-}
+
+
+
+/* VIDEO LIBRARY SECTION 1046px-------------------------- */
 
 .papa-phil {
     display: flex;
     flex-direction: row;
-    max-width: 50vw;
+    max-width: 40vw;
+    margin: 5rem;
 }
-
-/* VIDEO LIBRARY SECTION 1046px-------------------------- */
 
 .video-library {
     position: relative;
@@ -398,22 +491,28 @@ svg:hover {
     flex-wrap: nowrap;
     align-items: center;
     flex-direction: row;
-    max-width: 50vw;
 }
 
 .video-div {
+    position: relative;
     display: flex;
-   align-self: flex-start;
     align-items: center;
     flex-direction: column;
+    text-align: left;
+    margin-left: 5rem;
+    max-width: 20rem;
+}
+
+.video-library p {
+    margin: 0 0 2rem 0;
 }
 
 .hilt-1 {
+    position: absolute;
     display: flex;
     z-index: -1;
     position: absolute;
-    top: 20rem;
-    bottom: 0;
+    top: -14rem;
 }
 
 /* CLUB DOCUMENTS SECTION 1046px-------------------------- */
@@ -423,7 +522,8 @@ svg:hover {
     display: inline-flex;
     align-items: center;
     flex-direction: column;
-    max-width: 50vw;
+    max-width: 22rem;
+    margin: 0 0 5rem 10rem;
 }
 
 .hilt-2 {
@@ -434,5 +534,20 @@ svg:hover {
 }
 
 /* SOCIAL MEDIA FOOTER 1046px----------------------------- */
+
+.social-media span {
+    align-content: center;
+}
+
+.social-media h1 {
+    min-width: 22rem;
+}
+
+.social-media li{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    font-size: 1rem;
+}
 
 }
