--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
 button {
     font-family: "Roboto";
     max-height: 3rem;
+    max-width: 10rem;
     white-space: nowrap;
     color: white;
     background-color: #124bce;
@@ -290,7 +291,10 @@ ul {
     flex-direction: column;
     text-align: center;
     justify-content: space-evenly;
-    max-width: 15rem;
+}
+
+.video-button {
+    align-self: center;
 }
 
 /* SOCIAL MEDIA SECTION-------------------------- */
@@ -305,13 +309,14 @@ ul {
     display: flex;
     flex-direction: row;
     text-decoration: none;
-    justify-content: space-around;
     list-style-type: none;
     text-align: center;
+    justify-content: start;
     background-color: rgba(0, 0, 0, 0.6);
     max-width: 100vw;
-    padding: 2rem;
+    max-height: 3.5rem;
     font-size: .5rem;
+    padding: 0;
 }
 
 .social-list li {
@@ -326,13 +331,13 @@ ul {
     display: flex;
     flex: 1;
     background-color: black;
-    min-height: 4rem;
+    min-height: 3rem;
     bottom: 0;
 }
 
 svg {
-    max-height: 3rem;
-    max-width: 3rem;
+    max-height: 2.5rem;
+    max-width: 2.5rem;
     fill: white;
 }
 
@@ -413,7 +418,12 @@ button {
 /* OPENING TAG SECTION 1046px----------------------- */
 
 .opening-tag h1 {
-    min-width: 70vw;
+    min-width: 35rem;
+}
+
+.opening-tag p {
+    max-width: 30rem;
+    margin-left: 18rem;
 }
 
 .head-img {
@@ -444,16 +454,13 @@ button {
     margin: 1rem 0;
 }
 
-.regs {
-    margin-top: 1rem;
-}
-
 .reg-tag {
     min-width: 22rem;
     margin-right: 8rem;
 }
 
 .reg-text {
+    white-space: pre-line;
     text-align: right;
     margin: 1rem 0 2rem 0;
 }
@@ -499,7 +506,7 @@ button {
     align-items: center;
     flex-direction: column;
     text-align: left;
-    margin-left: 5rem;
+    margin-left: 4rem;
     max-width: 20rem;
 }
 
@@ -510,30 +517,46 @@ button {
 .hilt-1 {
     position: absolute;
     display: flex;
+    overflow:hidden;
     z-index: -1;
     position: absolute;
     top: -14rem;
+    max-width: 30rem;
 }
 
 /* CLUB DOCUMENTS SECTION 1046px-------------------------- */
 
 .club-documents {
     position: relative;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     flex-direction: column;
     max-width: 22rem;
-    margin: 0 0 5rem 10rem;
+    margin: 0 0 5rem 8rem;
 }
 
 .hilt-2 {
     display: block;
     z-index: -1;
     position: absolute;
+    max-width: 30rem;
     top: -3rem;
+    left: -8rem;
+}
+
+.google-drive {
+    position: absolute;
+    min-width: 10rem;
+    right: -30rem;
+    height: 40rem;
 }
 
 /* SOCIAL MEDIA FOOTER 1046px----------------------------- */
+
+.social-list {
+    min-height: 4rem;
+    justify-content: space-evenly;
+}
 
 .social-media span {
     align-content: center;
@@ -543,11 +566,6 @@ button {
     min-width: 22rem;
 }
 
-.social-media li{
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    font-size: 1rem;
-}
+
 
 }
