--- a/leadershipstyles.css
+++ b/leadershipstyles.css
@@ -254,8 +254,8 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 1rem;
-    justify-content: space-around;
-    padding: 0 0 0 1.5rem;
+    justify-content: center;
+    align-content: center;
 }
 
 .instructor-list li {
@@ -263,8 +263,8 @@
     grid-template-columns: 1;
     grid-template-rows: 1;
     list-style-type: none;
-    width: 7rem;
-    height: 7rem;
+    width: 8rem;
+    height: 8rem;
 }
 
 .instructor-list:nth-of-type(1n){
@@ -305,7 +305,7 @@
     grid-row: 1 / -1;
     max-width: 75%;
     max-height: 60%;
-    font-size: .6rem;
+    font-size: .7rem;
     justify-self: center;
     align-self: end;
     justify-content: center;
