--- a/leadershipstyles.css
+++ b/leadershipstyles.css
@@ -263,8 +263,9 @@
     grid-template-columns: 1;
     grid-template-rows: 1;
     list-style-type: none;
-    width: 8rem;
-    height: 8rem;
+    width: 9rem;
+    height: 9rem;
+    justify-self: center;
 }
 
 .instructor-list:nth-of-type(1n){
